--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,18 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+<!--
 	<parent>
 		<groupId>com.pch</groupId>
 		<artifactId>pch-parent</artifactId>
 		<version>1.0-SNAPSHOT</version>
+	</parent>
+-->
+	
+	<parent>
+		<groupId>com.baturu</groupId>
+		<artifactId>baturu-parent</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.bidtime.utils</groupId>
@@ -18,10 +26,18 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.baturu.utils</groupId>
+			<artifactId>json-common</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+
+		<!--
+		<dependency>
 			<groupId>com.bidtime.utils</groupId>
 			<artifactId>json</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+		-->
 
 		<dependency>
 			<groupId>commons-dbutils</groupId>
