--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>com.pch</groupId>
-		<artifactId>pch-parent</artifactId>
-		<version>1.0-SNAPSHOT</version>
-	</parent>
-
+    <parent>
+        <groupId>com.zswl.maven</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+    
 	<groupId>org.bidtime.utils</groupId>
 	<artifactId>idbutils</artifactId>
 	<packaging>jar</packaging>
@@ -16,12 +16,6 @@
 	<name>idbutils</name>
 
 	<dependencies>
-
-		<dependency>
-			<groupId>org.bidtime.utils</groupId>
-			<artifactId>json</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
-		</dependency>
 
 		<dependency>
 			<groupId>commons-dbutils</groupId>
