--- a/pom.xml
+++ b/pom.xml
@@ -267,7 +267,18 @@
                 <version>2.4</version>
             </plugin>
 
-			<plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                	<encoding>utf8</encoding> 
+                </configuration>
+            </plugin>
+
+		<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
