--- a/src/test/resources/data.properties
+++ b/src/test/resources/data.properties
@@ -1,6 +1,11 @@
-#btrbuss
-ds.driverClass=com.mysql.jdbc.Driver
-ds.jdbcUrl=jdbc:mysql://192.168.1.254:3306/test?useUnicode=true&characterEncoding=UTF-8&useOldAliasMetadataBehavior=true&zeroDateTimeBehavior=convertToNull
+#mysql
+
+#ds.driverClass=com.mysql.jdbc.Driver
+#ds.jdbcUrl=jdbc:mysql://192.168.1.254:3306/test?useUnicode=true&characterEncoding=UTF-8&useOldAliasMetadataBehavior=true&zeroDateTimeBehavior=convertToNull
+
+ds.driverClass=org.mariadb.jdbc.Driver
+ds.jdbcUrl=jdbc:mariadb://192.168.1.254:3306/test?useUnicode=true&characterEncoding=UTF-8&useOldAliasMetadataBehavior=true&zeroDateTimeBehavior=convertToNull
+
 ds.user=sa
 ds.password=123
 ds.minPoolSize=2
