--- a/pom.xml
+++ b/pom.xml
@@ -3,19 +3,41 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<!--
     <parent>
         <groupId>com.zs.maven</groupId>
         <artifactId>parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    -->
     
 	<groupId>org.bidtime.utils</groupId>
 	<artifactId>idbutils</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.15</version>
+	<version>1.0.16</version>
 	<name>idbutils</name>
     <properties>
-        <fastjson.version>1.2.12</fastjson.version>
+        <pinyin4j.version>2.5.1</pinyin4j.version>
+        <!--
+		<spring.version>4.3.2.RELEASE</spring.version>
+        <fastjson.version>1.2.17</fastjson.version>
+        <commons-dbutils.version>1.6</commons-dbutils.version>
+        <idbutils.version>1.0.16</idbutils.version>
+        
+        <servlet-api.version>2.5</servlet-api.version>
+        <commons-fileupload.version>1.3.2</commons-fileupload.version>
+        <dom4j.version>1.6.1</dom4j.version>
+        <hibernate-validator.version>4.3.1.Final</hibernate-validator.version>
+        <commons-lang.version>2.6</commons-lang.version>
+		<log4j.version>1.2.17</log4j.version>
+        <slf4j-api.version>1.7.12</slf4j-api.version>
+        <slf4j-log4j12.version>1.7.12</slf4j-log4j12.version>
+		<junit.version>4.8.1</junit.version>
+
+        <c3p0.version>0.9.5.2</c3p0.version>
+        <mchange-commons-java.version>0.2.12</mchange-commons-java.version>
+        <mariadb-java-client.version>1.5.5</mariadb-java-client.version>
+        -->
     </properties>
 
 	<dependencies>
@@ -23,63 +45,65 @@
 		<dependency>
 			<groupId>commons-dbutils</groupId>
 			<artifactId>commons-dbutils</artifactId>
-			<version>1.6</version>
+			<version>${commons-dbutils.version}</version>
 		</dependency>
 		
         <!--校验-->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>4.3.1.Final</version>
+            <version>${hibernate-validator.version}</version>
         </dependency>
         
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-			<scope>provided</scope>
+			<version>${servlet-api.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>1.3.1</version>
+			<version>${commons-fileupload.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>com.belerweb</groupId>
 			<artifactId>pinyin4j</artifactId>
-			<version>2.5.0</version>
+			<version>${pinyin4j.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
-			<version>1.6.1</version>
+			<version>${dom4j.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
+			<version>${commons-lang.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<!-- <version>1.2.17</version> -->
+			<version>${log4j.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.7</version>
+			<!-- <version>1.7.7</version> -->
+			<version>${slf4j-api.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.7</version>
+			<!-- <version>1.7.7</version> -->
+			<version>${slf4j-log4j12.version}</version>
 		</dependency>
 
 		<!-- spring-->
@@ -202,7 +226,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.1</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         
@@ -210,14 +234,14 @@
 		<dependency>
            <groupId>com.mchange</groupId>
            <artifactId>c3p0</artifactId>
-           <version>0.9.5.2</version>
+           <version>${c3p0.version}</version>
            <scope>test</scope>
        </dependency>
         
         <dependency>
             <groupId>com.mchange</groupId>
             <artifactId>mchange-commons-java</artifactId>
-            <version>0.2.12</version>
+            <version>${mchange-commons-java.version}</version>
             <scope>test</scope>
         </dependency>
         <!--c3p0 end -->
@@ -226,17 +250,9 @@
 		<dependency>
 		    <groupId>org.mariadb.jdbc</groupId>
 		    <artifactId>mariadb-java-client</artifactId>
-		    <version>1.5.5</version>
+		    <version>${mariadb-java-client.version}</version>
             <scope>test</scope>
 		</dependency>
-
-		<!-- 
-		<dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.40</version>
-        </dependency>
-        -->
 
         <!-- json -->
         <dependency>
