--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,13 @@
 	<name>idbutils</name>
     <properties>
         <pinyin4j.version>2.5.1</pinyin4j.version>
+
 		<spring.version>4.3.2.RELEASE</spring.version>
         <fastjson.version>1.2.17</fastjson.version>
         <commons-dbutils.version>1.6</commons-dbutils.version>
         <idbutils.version>1.0.16</idbutils.version>
         
-        <servlet-api.version>2.5</servlet-api.version>
+        <servlet-api.version>3.1.0</servlet-api.version>
         <commons-fileupload.version>1.3.2</commons-fileupload.version>
         <dom4j.version>1.6.1</dom4j.version>
         <hibernate-validator.version>4.3.1.Final</hibernate-validator.version>
@@ -54,11 +55,11 @@
         </dependency>
         
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>${servlet-api.version}</version>
-		</dependency>
-		
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${servlet-api.version}</version>
+        </dependency>
+        		
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
