--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <fastjson.version>1.2.17</fastjson.version>
         <commons-dbutils.version>1.6</commons-dbutils.version>
         <idbutils.version>1.0.16</idbutils.version>
+		<lombok.version>1.16.8</lombok.version>
         
         <servlet-api.version>3.1.0</servlet-api.version>
         <commons-fileupload.version>1.3.2</commons-fileupload.version>
@@ -37,6 +38,7 @@
         <c3p0.version>0.9.5.2</c3p0.version>
         <mchange-commons-java.version>0.2.12</mchange-commons-java.version>
         <mariadb-java-client.version>1.5.5</mariadb-java-client.version>
+
     </properties>
 
 	<dependencies>
@@ -104,7 +106,7 @@
 			<!-- <version>1.7.7</version> -->
 			<version>${slf4j-log4j12.version}</version>
 		</dependency>
-
+        
 		<!-- spring-->
 			
 		<dependency>
@@ -258,6 +260,14 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
+            <scope>test</scope>
+        </dependency>
+		
+		<!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
             <scope>test</scope>
         </dependency>
         
