--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,11 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<!--
     <parent>
-        <groupId>com.zs.maven</groupId>
+        <groupId>maven.parent</groupId>
         <artifactId>parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    -->
     
 	<groupId>org.bidtime.utils</groupId>
 	<artifactId>idbutils</artifactId>
@@ -18,7 +16,7 @@
 	<name>idbutils</name>
     <properties>
         <pinyin4j.version>2.5.1</pinyin4j.version>
-
+    	<!--
 		<spring.version>4.3.2.RELEASE</spring.version>
         <fastjson.version>1.2.17</fastjson.version>
         <commons-dbutils.version>1.6</commons-dbutils.version>
@@ -34,6 +32,7 @@
         <slf4j-api.version>1.7.12</slf4j-api.version>
         <slf4j-log4j12.version>1.7.12</slf4j-log4j12.version>
 		<junit.version>4.8.1</junit.version>
+		-->
 
         <c3p0.version>0.9.5.2</c3p0.version>
         <mchange-commons-java.version>0.2.12</mchange-commons-java.version>
