--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-/target/
+﻿**/.settings/
+**/.classpath
+**/.project
+**/.idea
+**/*.iml
+dist/
+**/target/
+*.log
+.DS_Store
+.classpath
+.project
+.settings/
