modified rows to sql

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootLogger=info, stdout
 
 # debug
 log4j.logger.org.bidtime.dbutils.jdbc.connection.log.LogInsertSql=DEBUG
-log4j.logger.org.bidtime.dbutils.jdbc.connection.log.LogDeleteeSql=DEBUG
+log4j.logger.org.bidtime.dbutils.jdbc.connection.log.LogDeleteSql=DEBUG
 log4j.logger.org.bidtime.dbutils.jdbc.connection.log.LogUpdateSql=DEBUG
 log4j.logger.org.bidtime.dbutils.jdbc.connection.log.LogSelectSql=DEBUG
 
