--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<commons-dbutils.version>1.6</commons-dbutils.version>
 		<idbutils.version>1.0.16</idbutils.version>
 
-		<spring.version>4.3.2.RELEASE</spring.version>
+		<spring.version>4.2.9.RELEASE</spring.version>
 		<fastjson.version>1.2.17</fastjson.version>
 		<commons-lang3.version>3.5</commons-lang3.version>
 
@@ -31,13 +31,14 @@
 
 		<junit.version>4.12</junit.version>
 
-		<c3p0.version>0.9.5.2</c3p0.version>
+		<druid.version>1.1.7</druid.version>
 		<mchange-commons-java.version>0.2.12</mchange-commons-java.version>
 		<mariadb-java-client.version>1.5.5</mariadb-java-client.version>
 
 	</properties>
 
 	<dependencies>
+	
 		<!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
 		<dependency>
 		    <groupId>commons-beanutils</groupId>
@@ -207,22 +208,13 @@
 		<!-- <dependency> <groupId>org.hamcrest</groupId> <artifactId>hamcrest-core</artifactId> 
 			<version>1.3</version> <scope>test</scope> </dependency> -->
 
-		<!--c3p0 begin url: http://download.softagency.net/MySQL/Downloads/Connector-J/ -->
+		<!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
 		<dependency>
-			<groupId>com.mchange</groupId>
-			<artifactId>c3p0</artifactId>
-			<version>${c3p0.version}</version>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>druid</artifactId>
+		    <version>${druid.version}</version>
 			<scope>test</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>com.mchange</groupId>
-			<artifactId>mchange-commons-java</artifactId>
-			<version>${mchange-commons-java.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<!--c3p0 end -->
 
 		<!-- mysql jdbc driver -->
 		<dependency>
@@ -237,7 +229,6 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>${fastjson.version}</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
