--- a/src/test/resources/data.properties
+++ b/src/test/resources/data.properties
@@ -4,10 +4,9 @@
 #ds.jdbcUrl=jdbc:mysql://192.168.1.254:3306/test?useUnicode=true&characterEncoding=UTF-8&useOldAliasMetadataBehavior=true&zeroDateTimeBehavior=convertToNull
 
 ds.driverClass=org.mariadb.jdbc.Driver
-ds.jdbcUrl=jdbc:mariadb://172.16.107.196:3306/test?useUnicode=true&characterEncoding=UTF-8&useOldAliasMetadataBehavior=true&zeroDateTimeBehavior=convertToNull
+ds.url=jdbc:mariadb://192.168.100.225:23306/test?useUnicode=true&characterEncoding=UTF-8&useOldAliasMetadataBehavior=true&zeroDateTimeBehavior=convertToNull
 
-ds.user=root
+ds.username=root
 ds.password=123456
-ds.minPoolSize=2
-ds.maxPoolSize=4
-ds.initialPoolSize=2
+ds.maxActive=4
+ds.initialSize=2
