--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 ﻿﻿<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 
 	<!-- <parent> <groupId>com.ecarpo.parent</groupId> <artifactId>ecarpo-parent</artifactId> 
@@ -31,9 +32,10 @@
 
 		<junit.version>4.12</junit.version>
 
-		<druid.version>1.1.7</druid.version>
-		<mchange-commons-java.version>0.2.12</mchange-commons-java.version>
+		<!-- <druid.version>1.1.7</druid.version>
+		<mchange-commons-java.version>0.2.12</mchange-commons-java.version> -->
 		<mariadb-java-client.version>1.5.5</mariadb-java-client.version>
+ 	    <HikariCP.version>4.0.3</HikariCP.version>
 
 	</properties>
 
@@ -209,12 +211,21 @@
 			<version>1.3</version> <scope>test</scope> </dependency> -->
 
 		<!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+		<!--
 		<dependency>
 		    <groupId>com.alibaba</groupId>
 		    <artifactId>druid</artifactId>
 		    <version>${druid.version}</version>
 			<scope>test</scope>
 		</dependency>
+		-->
+		
+        <dependency>
+          <groupId>com.zaxxer</groupId>
+          <artifactId>HikariCP</artifactId>
+  	      <version>${HikariCP.version}</version>
+          <scope>test</scope>
+        </dependency>
 
 		<!-- mysql jdbc driver -->
 		<dependency>
